[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-web = "4.2.1"
derive_more = "0.99.17"
futures = "0.3.24"
regex = "1.6.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = "1.21.1"
